--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --no-include-email --region us-east-1)
-      - REPOSITORY_URI=897150306444.dkr.ecr.us-east-1.amazonaws.com/capstone
+      - $(aws ecr get-login --no-include-email --region us-east-2)
+      - REPOSITORY_URI=976104566718.dkr.ecr.us-east-2.amazonaws.com/capstone_pgpcc
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
